# ChangeLog for dev-java/jmock
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/jmock/ChangeLog,v 1.28 2015/04/16 09:10:38 ago Exp $

  16 Apr 2015; Agostino Sarubbo <ago@gentoo.org> jmock-2.6.1.ebuild:
  Stable for x86, wrt bug #546298

  16 Apr 2015; Agostino Sarubbo <ago@gentoo.org> jmock-2.6.1.ebuild:
  Stable for amd64, wrt bug #546298

*jmock-2.6.1 (14 Apr 2015)

  14 Apr 2015; Patrice Clement <monsieurp@gentoo.org> +jmock-2.6.1.ebuild,
  jmock-2.5.1.ebuild:
  Bumped to latest version in order to mend SLOTs and compile issues. Fix bug
  546548.

  11 Apr 2015; Patrice Clement <monsieurp@gentoo.org> jmock-2.5.1.ebuild:
  Adjust dev-java/hamcrest-* SLOTs.

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> jmock-1.1.0-r2.ebuild,
  jmock-1.2.0.ebuild, jmock-2.5.1.ebuild:
  QA: drop trailing '.' from DESCRIPTION

*jmock-2.5.1 (28 Feb 2014)

  28 Feb 2014; Johann Schmitz <ercpe@gentoo.org>
  +files/2.5.1-invokeAll-invokeAny.patch, +jmock-2.5.1.ebuild:
  Version bump of jmock wrt bug #213175

*jmock-1.2.0 (28 Feb 2014)

  28 Feb 2014; Johann Schmitz <ercpe@gentoo.org> +jmock-1.2.0.ebuild:
  Version bump of jmock to 1.2.0 wrt bug #488818

  01 Sep 2013; Fabian Groffen <grobian@gentoo.org> jmock-1.1.0-r2.ebuild:
  Marked *-macos

  01 Sep 2013; Fabian Groffen <grobian@gentoo.org> jmock-1.1.0-r2.ebuild:
  Marked *-macos

  27 Jun 2013; Alexis Ballier <aballier@gentoo.org> jmock-1.1.0-r2.ebuild:
  keyword ~amd64-fbsd

  20 Jan 2010; Brent Baude <ranger@gentoo.org> jmock-1.1.0-r2.ebuild:
  Marking jmock-1.1.0-r2 ppc64 for bug 281006

  03 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  jmock-1.1.0-r2.ebuild:
  Transfer Prefix keywords

  30 Mar 2008; Markus Rothe <corsair@gentoo.org> jmock-1.1.0-r2.ebuild:
  Added ~ppc64

  08 Mar 2008; Krzysiek Pawlik <nelchael@gentoo.org> jmock-1.1.0-r2.ebuild:
  Stable on ppc.

  19 Dec 2007; Petteri Räty <betelgeuse@gentoo.org> -jmock-1.1.0-r1.ebuild: