@@ -11,23 +11,17 @@ DIST jmock-2.6.1-jars.zip 1249841 SHA256 e49a0f7628c6368e46de1c48dfd8aed084f0366
 EBUILD jmock-1.1.0-r2.ebuild 1437 SHA256 b2577dd4ef8f54cf47589890bad6030ed2d9079a3bf60932cf1a89758f1b00ee SHA512 bc36582cbed874e28c0010c5f1ec8639703c3efbddf0647554aaa15b3ad0ae803f570f93b21a2301d7f1e9defbc10b80c5f004b9d3b5b5ffce3ae6955bbe5d89 WHIRLPOOL e904a65441c8ea040965508928c8445f5e0e8e6e386a1cd6e94ea3ea2faf0a80ecee4625b8723ac9eed32e7fc96c5da30a4bb657158c96eabcca44f7d0426c6f
 EBUILD jmock-1.2.0.ebuild 950 SHA256 c9b7c0a0fa20d61fa174ea5f615034e438d442500ce8cdab5c44e151c6e538f5 SHA512 76612d3aa32ae21858e4a9f4badfcdc940df8555bf4a31b56bfe22b87a4ca2e47f76aa173518ad076d9ddc9730894403be0c633ee148c87a5392f29d27e2a087 WHIRLPOOL 058fd74e92c31f6eb97113970ef2941ec87fd850fae3163657be0066486795e7ab717b3ba01c6d95f5cdbf7814aca2f2861a13f3389a6453ae7bf18bda53a3ee
 EBUILD jmock-2.5.1.ebuild 955 SHA256 ec2f36af5ef09b7c369060c927ed5d885043551e2e6339df19d97dd3fceefa9e SHA512 e4e19b6f43bf24e180c5f11003ccfc161c79f25401ccb7ae8539d6022ff63bd846c399cb70354babf6fe18a234a5ef210c2311196bc29d5dc60c08c052caf17e WHIRLPOOL 378f48a92277623fea156b64eabf6f49331046a05e019e0bb5e14737d0b3c3ee73ee7307d10a3e29bf0384d6a89542fed37456faafca5ac36985b0510edf44cb
-EBUILD jmock-2.6.1.ebuild 913 SHA256 f097ff75bc01bdf8ef76e3f7c8c2d8c543a0ae38ad39560c4e0aebc2f1942375 SHA512 faa3e7bbbd0874333fd0b858b01746b25a8a62b5cbe30956bcf6e8e0fdda9862cc988d926606be8acd05deff0b6bdf1cc9656982eb68ba5f749fa82ea4d7534a WHIRLPOOL 66ac183db3f57fefd140134abf9c292e42032da9e5f6b828e16a93257b3251cfab17e42df29bfa941393250704fc177320f5411aba2ebd9d4d35603950b6bbf3
-MISC ChangeLog 3902 SHA256 c9458a2d5b440774fda32a4e87fdb09767ac9d8721fe4d9a5909db9a8955b3ad SHA512 fb7e1a2e8ee83046fb6a249c1bcb7eed6c7e4acff5756660388b00f1a2d3162e09c0b15cf85cd8d63bcc098607d91e7205b0f0dda4e011ebdef68c627e753904 WHIRLPOOL 8db1082878fb9034013ba4910af0110c64fa812a10fffb81ecbe69d5b29c06d4be0467c596c0a9ad2a7d8266c5ff65b9a511fb60e9fc3846937451e742a104f4
+EBUILD jmock-2.6.1.ebuild 923 SHA256 4b52ff1b229a5851779868bf291b902cb4da4ad8b397d824c500213673ab6797 SHA512 de0500072397fc73f854712652e6a87ca5a74b804e8129109d571e3159b3ff02419e72fefbce7ccf901d28c3411d809d64c7da70751862a7af0042da35e77dec WHIRLPOOL 02d1e9f340c39eef5f71ef07d0013b5faaff789250c70dd9edc066a01f754dbe715473fd434ebf0207fc5a45430174ad9c450785e2b2799825fa1d56625088a2
+MISC ChangeLog 4076 SHA256 6f6a5501e539b7675367adb696156955f4c2996b842461403cdd495c4656bf41 SHA512 5b50163781a4c0b5d5a46dbd53e12a4f4ca5b7672f6bc6621f891c50ebacd8cd53feaf0611483b9e3f13a5391dcf7ae56d8714b59f43ceb67811f389077ca1a2 WHIRLPOOL df6d34db7b237eecd9aa449e5fa54d09ecc3909a6ded7f4b48fad083be709ca876bcc7c243104b6d91a36e4bbb54c6bae42274280555899f795b64984023fb8b
 MISC metadata.xml 157 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9 SHA512 bbae663e26f48fdc5e272adc2b06c14f77f34c53caf84acb53908ff036e7c12a3edbbc0929d2db56bee861a453381d979c7e0983a23716f629ed2135c22ffece WHIRLPOOL 887e153e2481e7d76f0f1b67a395f10f0328b93930185ecdb8fcb5fe3c50f839086a18831d61cf45b34657aaffca6c3b7900cf3c04b712846a05027a84602448
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVL3yOAAoJELp701BxlEWf/LwQALXR6c2mhnnbc3fMc4wivz/h
-hG8P6ZCzrms2b5uS5T1UFLlLCkmWyASnB/H4ztQafkMMf79Qs54E8FGpAHUkmFpe
-Lq+2xVDqvdYtOYus5aHu/vz34Wnq7Vn3niDo2qMg/L4qtNuAVN6hIBCPcSUMmGfW
-TOHd9Ek5Vm53NdC6q7+xooNFz2M0cvbQVLeF/+Rj9wD4woZTrOytBUCBIAzjycUR
-RysaYe3/tzBvuVYCXAkvG9pywYQ8JGWWtTeUWhzZvvwN+4TB9LICxDjmrZMFyHIJ
-F7+hQMMrcMZ23wjcuQIaAkMa3WIgZb5WpMaZSEt0gJp2qE0V8gYTLIWs9NPrjzrj
-bLHw0/4530L5mj0V+WqH9iCbx7TyMT0+Z0Mu8q4R7hu3nPO63/VtPI8Zife5OQnX
-YihDYJjZ0VSVMfV9G75RfXVawMW+lIxaHcKyc3oFgfz/aGHJdJqUt17MXYJRS5Fk
-QRqAdefcy8ncfV4btMQM/nQSKASgaG656nQjy6ZbiGEneQf2mbzY0I8dPMHwBQwK
-OUiBwEAz6WHA+YQTcx4W27CLnhnZHOQgIlyPmK88ehO231SGruOGvU6iRUz9BpmG
-6cX1pkI43rj/3+zvFF6RogUEx7Y+KlQxvVUAlhCZKrte1KVOsWGMassCojUs8x0W
-y4tjFLUhLa2u6TYQ2mUU
-=3hrM
+iQEcBAEBCAAGBQJVN3WDAAoJEJGRpfGTSRu4CKQIAKprlsLLdPu+ATrsUfcn/2wo
+4rVanTI65gXbIV6sechLLKe2IEkW0b7L+UyHf365r5vqvcNJCQk854hj58jMm5Ts
+neBhHdZ2JLSbLpCvostEWGJfTBqH5T5E2mvsSY3sdncYmMrmSLTl2IWM+ItS66Bq
+3TNyktsrM74FWwHQlvLrwcOTWpP0VVH0L5SH0uJSAGmgDsyz3sXpXhOfAplhSuHJ
+5xIhv2E0vb3Czo9dNvpI9p5VgH6QAmctna+8shx8uiH5/pI6dYGXADU3dW6uy2xf
+WXaUeNTp67qQJKyKEV4OnENtDLeuW8FfCoZvIGwPp1WqYoVfJDjTNTN20FoHFcE=
+=gqnj
 -----END PGP SIGNATURE-----
