@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jmock/jmock-2.6.1.ebuild,v 1.3 2015/04/16 09:10:38 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jmock/jmock-2.6.1.ebuild,v 1.4 2015/04/22 10:18:39 monsieurp Exp $
 
 EAPI=5
 
@@ -21,10 +21,10 @@ CDEPEND="dev-java/hamcrest-core:1.3
 	dev-java/hamcrest-library:1.3
 	dev-java/junit:4"
 
-RDEPEND="virtual/jre:1.6
+RDEPEND=">=virtual/jre-1.6
 	${CDEPEND}"
 
-DEPEND="virtual/jdk:1.6
+DEPEND=">=virtual/jdk-1.6
 	${CDEPEND}
 	app-arch/unzip"
 
