@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile install preinst prepare setup unpack
-DEPEND=virtual/jdk:1.6 dev-java/hamcrest-core:1.3 dev-java/hamcrest-library:1.3 dev-java/junit:4 app-arch/unzip >=dev-java/java-config-2.1.9-r1 source? ( app-arch/zip )
+DEPEND=>=virtual/jdk-1.6 dev-java/hamcrest-core:1.3 dev-java/hamcrest-library:1.3 dev-java/junit:4 app-arch/unzip >=dev-java/java-config-2.1.9-r1 source? ( app-arch/zip )
 DESCRIPTION=Library for testing Java code using mock objects
 EAPI=5
 HOMEPAGE=http://www.jmock.org
 IUSE=elibc_FreeBSD doc source elibc_FreeBSD
 KEYWORDS=amd64 x86
 LICENSE=BSD
-RDEPEND=virtual/jre:1.6 dev-java/hamcrest-core:1.3 dev-java/hamcrest-library:1.3 dev-java/junit:4 >=dev-java/java-config-2.1.9-r1 source? ( app-arch/zip )
+RDEPEND=>=virtual/jre-1.6 dev-java/hamcrest-core:1.3 dev-java/hamcrest-library:1.3 dev-java/junit:4 >=dev-java/java-config-2.1.9-r1 source? ( app-arch/zip )
 SLOT=2
 SRC_URI=http://www.jmock.org/downloads/jmock-2.6.1-jars.zip
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	java-pkg-2	65bbb59987d777c1106ae8aa4bf36e7b	java-pkg-simple	17a3c86e01ea263d17656e5c677a9368	java-utils-2	2257adeaac9408ab545ef49ae751bae6	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=8eefea2a176cb55d079466359620fbc6
+_md5_=8800b347437ae6ba4d29ef4354fbdf4a
