@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/jmock
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jmock/ChangeLog,v 1.28 2015/04/16 09:10:38 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jmock/ChangeLog,v 1.29 2015/04/22 10:18:39 monsieurp Exp $
+
+  22 Apr 2015; Patrice Clement <monsieurp@gentoo.org> jmock-2.6.1.ebuild:
+  Remove hard SLOTs depends on virtual/{jdk-jre} in favour of normal deps. Fix
+  bug 547282.
 
   16 Apr 2015; Agostino Sarubbo <ago@gentoo.org> jmock-2.6.1.ebuild:
   Stable for x86, wrt bug #546298
